tests/ui/fail/generic.stderr
error: bitfield structs can only use const generics
 --> tests/ui/fail/generic.rs:4:15
  |
4 | struct Generic<T> {
  |               ^^^
